Fixed logo stretch

--- a/vue/public/generalstyles.css
+++ b/vue/public/generalstyles.css
@@ -315,7 +315,9 @@ label {
 /*================================================================================================================================================================================================
                                                                                                  PET SPOTLIGHT
   ================================================================================================================================================================================================*/
-img {
+.img-left,
+.img-center,
+.img-right {
     width: 10rem;
 }
 
